# HomeTask

./: CMakeLists.txt  DESIGN.md  README.md  cipher.cpp  cipher.h  client.cpp  client.h  command.cpp  command.h  common.cpp  common.h  demo.sh  private.pem  public.pem  receive.cpp  send.cpp  server.cpp  server.h  server_ctx.cpp  server_ctx.h
tests/: CMakeLists.txt  CipherTests.cpp
